# OWUIM

./: .env.example  .flake8  .gitignore  CLAUDE.md  OpenWebUI.bat  OpenWebUI.vbs  README.md  SCHEDA_FUNZIONALITA.md  build.py  build_exe.bat  build_installer.bat  config.py  cose da fare.html  crea_collegamento_desktop.bat  docker-compose.yml  manage.sh  openwebui-manager.desktop  openwebui_gui.py  openwebui_gui_backup.py  openwebui_gui_lite.py  pyproject.toml  requirements-test.txt  requirements.txt  run_gui.bat  run_gui.sh  run_gui_lite.bat  run_gui_lite.sh  security.py  setup_env.bat  setup_env.sh  start_all.bat  start_all.sh  stop_all.sh  translations.py
Tools OWUI/: document_reader.py  finance_italian.py  image_analyzer.py  image_handler.py  math_assistant.py  productivity_assistant.py  research_assistant.py  scientific_council.py  text_assistant.py
docs/: ANALISI_PRINCIPI_SOFTWARE.md  API.md  CONFIGURAZIONE_ITALIANO.md  FILES_CREATED.md  GUIDA_COMPLETA.md  INFO_DOPO_INSTALLAZIONE.txt  INFO_PRIMA_INSTALLAZIONE.txt  LAN_ACCESS.md  QUICK_FIX_MICROFONO.md  QUICK_START.md  SCHEDA_FUNZIONALITA.md  SMART_WEB_SEARCH.md  TOOLS_PRONTI.html  TTS_LOCALE.md  VOICE_MODE_PERMISSIONS.md  system_prompt_smart_search.txt
document_service/: CONFIGURAZIONE_SERVIZI.md  README.md  document_service.py  start_document_service.bat  start_document_service.sh
export/: INSTALLA.sh  README.txt  docker-compose.yml  start.sh  stop.sh  webui.db
image_analysis/: README.md  __init__.py  convert_image.bat  convert_image.sh  image_converter.py  image_service.py  start_image_service.bat  (+1 more)
(+75 files in other folders)
